# documind-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage 2  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: schemas.py
backend/app/services/: ai.py  chunker.py  files.py  pdf_parser.py  retrieval.py  transcription.py
backend/app/tests/: test_ai.py  test_auth.py  test_chunker.py  test_files_service.py  test_main.py  test_pdf_parser.py  test_retrieval.py  test_routes.py  test_transcription.py
deploy/: setup.sh
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AuthPanel.tsx  ChatPanel.tsx  Sidebar.tsx  SummaryPanel.tsx  WorkspaceHeader.tsx
frontend/src/lib/: api.ts  firebase.ts  media.ts  types.ts
frontend/src/styles/: app.css
