[project]
name = "documind-ai-backend"
version = "0.1.0"
description = "FastAPI backend for DocuMind AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.2",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pypdf>=4.3.0",
  "firebase-admin>=6.5.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=95"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
